# ai-semantic-source-scanner

./: .claude-session-20260511T131214.json  .context-handoff.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TRADEOFFS.md  pyproject.toml
.github/workflows/: test.yml
ai_codescan/: __main__.py  analyzer.py  cli.py  config.py  gate.py  llm.py  manifest.py  nominator.py  prep.py  repo_md.py  report.py  sandbox.py  server.py  sidecars.py  slice.py  snapshot.py  stack_detect.py  storage_taint.py  user_config.py  validator.py  views.py  visualize.py
ai_codescan/ast/: runner.py
ai_codescan/ast/node_worker/: extract_bash.mjs  extract_csharp.mjs  extract_go.mjs  extract_html.mjs  extract_java.mjs  extract_kotlin.mjs  extract_php.mjs  extract_python.mjs  extract_ruby.mjs  extract_treesitter.mjs  extract_ts.mjs  extract_yaml.mjs  package.json  pnpm-lock.yaml  worker.mjs
ai_codescan/engines/: codeql.py  hybrid.py  joern.py  joern_queries.sc  llm_heavy.py  semgrep.py
ai_codescan/engines/semgrep_rules/: timing-attack.yaml
ai_codescan/entrypoints/: detectors.py  ingest.py  render.py
ai_codescan/findings/: model.py  queue.py
ai_codescan/index/: duckdb_ingest.py  duckdb_schema.py  scip.py
ai_codescan/ingest/: sarif.py
ai_codescan/runs/: orchestrator.py  state.py
ai_codescan/skills/deep_analyzer/: SKILL.md
ai_codescan/skills/deep_analyzer/prompts/: analyzer.md
ai_codescan/skills/deep_analyzer/scripts/: loop.sh
ai_codescan/skills/llm_heavy/: SKILL.md
ai_codescan/skills/llm_heavy/prompts/: walker.md
ai_codescan/skills/llm_heavy/scripts/: loop.sh
ai_codescan/skills/storage_taint_resolver/: SKILL.md
ai_codescan/skills/storage_taint_resolver/prompts/: resolver.md
ai_codescan/skills/storage_taint_resolver/scripts/: loop.sh
ai_codescan/skills/validator/: SKILL.md
ai_codescan/skills/validator/prompts/: validator.md
ai_codescan/skills/validator/scripts/: loop.sh
ai_codescan/skills/wide_nominator/: SKILL.md
ai_codescan/skills/wide_nominator/prompts/: nominator.md
ai_codescan/skills/wide_nominator/scripts/: loop.sh
ai_codescan/taxonomy/: bug_classes.yaml  diff.py  loader.py
ai_codescan/web/static/: index.html  main.js  style.css
docs/: QUALITY.md  schema.taint.yml.example
docs/superpowers/plans/: 2026-05-08-ai-codescan-1a-foundation.md  2026-05-08-ai-codescan-1b-ast-scip-duckdb.md  2026-05-08-ai-codescan-1c-codeql-flows.md  2026-05-08-ai-codescan-1d-sidecars-entrypoints-views.md  2026-05-08-ai-codescan-1e-nominator-gate-run.md  2026-05-09-ai-codescan-2a-deep-analyzer.md  2026-05-09-ai-codescan-2b-validator.md
docs/superpowers/specs/: 2026-05-08-ai-codescan-phase1-design.md  2026-05-09-ai-codescan-phase2-design.md
scripts/: install.sh  regen_scip_proto.sh
tests/: conftest.py  test_analyzer.py  test_ast_runner.py  test_cli.py  test_codeql_runner.py  test_config.py  test_engines_hybrid.py  test_engines_llm_heavy.py  test_entrypoints_detect.py  test_entrypoints_render.py  test_findings_model.py  test_findings_queue.py  test_gate.py  test_index_duckdb.py  test_index_scip.py  test_joern_runner.py  test_llm.py  test_manifest.py  test_nominator_orchestrator.py  test_orchestrator.py  test_prep_bash.py  test_prep_csharp.py  test_prep_go.py  test_prep_java.py  test_prep_kotlin.py  test_prep_php.py  test_prep_python.py  test_prep_ruby.py  test_prep_yaml.py  test_repo_md.py  test_report.py  test_runs_state.py  test_sandbox.py  test_sarif_ingest.py  test_server.py  test_sidecars.py  test_slice.py  test_snapshot.py  test_stack_detect.py  test_storage_taint.py  (+7 more)
tests/fixtures/: nominations-sample.md  sample.sarif
tests/fixtures/monorepo-pnpm/: package.json
tests/fixtures/tiny-actions/.github/workflows/: triage.yml
tests/fixtures/tiny-aspnet/: Program.cs  tiny-aspnet.csproj
tests/fixtures/tiny-bash/: lookup.sh
tests/fixtures/tiny-express/: package-lock.json  package.json  server.js
tests/fixtures/tiny-fastapi/: main.py  pyproject.toml
tests/fixtures/tiny-flask/: app.py  pyproject.toml
tests/fixtures/tiny-gin/: go.mod  main.go
tests/fixtures/tiny-ktor/: build.gradle.kts  settings.gradle.kts
tests/fixtures/tiny-ktor/src/main/kotlin/: App.kt
tests/fixtures/tiny-react/: package.json  tsconfig.json
tests/fixtures/tiny-react/src/: App.tsx
tests/fixtures/tiny-sinatra/: Gemfile  app.rb
tests/fixtures/tiny-slim/: composer.json  index.php
tests/fixtures/tiny-spring/: pom.xml
tests/fixtures/tiny-spring/src/main/java/example/: UserController.java
tests/fixtures/tiny-vuln/: package.json  server.js
