[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

[project]
name = "ai-codescan"
version = "0.1.0"
description = "AI-driven SAST pipeline (Phase 1A: foundation, snapshot, stack-detect)"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.15.1",
]

[project.scripts]
ai-codescan = "ai_codescan.cli:app"

[tool.uv.build-backend]
module-name = "ai_codescan"
module-root = ""

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "ty>=0.0.1a1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "RET", "PL"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
markers = [
  "slow: tests that touch the filesystem heavily",
  "integration: end-to-end CLI tests",
]
