[build-system]
requires = ["uv_build>=0.5,<0.11"]
build-backend = "uv_build"

[project]
name = "ai-codescan"
version = "0.1.0"
description = "AI-driven SAST pipeline (Phase 1A: foundation, snapshot, stack-detect)"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.15.1",
  "duckdb>=1.1.3",
  "protobuf>=5.28",
  "xxhash>=3.5",
  "pyyaml>=6.0.2",
  "sarif-om>=1.0.4",
  "sqlglot>=26",
  "semgrep>=1.162.0",
]

[project.scripts]
ai-codescan = "ai_codescan.cli:app"

[tool.uv.build-backend]
module-name = "ai_codescan"
module-root = ""

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "hypothesis>=6.115",
  "ruff>=0.7",
  "ty>=0.0.1a1",
  "grpcio-tools>=1.66",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["ai_codescan/third_party"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "RET", "PL"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLR2004"]
"ai_codescan/third_party/*" = ["ALL"]

# `ty` does not have a single `strict` toggle; instead, the Makefile passes
# `--error-on-warning` to escalate every warn-level diagnostic to an error.
# `environment.root` replaces the deprecated `src.root` (ty 0.0.34+).
[tool.ty.environment]
root = ["ai_codescan", "tests"]

[tool.ty.rules]
# Strictness lifts beyond the default rule set. Each entry escalates a
# default-warn rule to ``error`` (so ``ty check`` fails on it), or enables
# a default-off rule worth catching in this codebase. Documented one
# rationale per group so removing one never feels arbitrary.
#
# Implicit type holes in public APIs.
unresolved-import = "error"
unresolved-attribute = "error"
unresolved-reference = "error"
# Surfaces typos like ``foo: list[Path] = (...)`` where the assignment is
# a tuple, before the linter catches it via PLE.
invalid-assignment = "error"
# Catches return-type mismatches in public functions, plus ``return``
# without a value where the signature says ``-> int``.
invalid-return-type = "error"
# Promote argument-shape errors to hard fails — ty's default is ``warn``.
missing-argument = "error"
too-many-positional-arguments = "error"
unknown-argument = "error"
# Argument-type and parameter-default mismatches.
invalid-argument-type = "error"
invalid-parameter-default = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
markers = [
  "slow: tests that touch the filesystem heavily",
  "integration: end-to-end CLI tests",
]
